objects/Wave_Template__c.object
<CustomObject>
    <fields>
        <fullName>Autumn_wave__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Autumn wave</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Description_of_PC_to_TC_break__c</fullName>
        <description>Sentence describing the break between the PC and TC. Used for merging into timetables for YP and PG</description>
        <inlineHelpText>Sentence describing the break between the PC and TC. Used for merging into timetables for YP and PG</inlineHelpText>
        <label>Description of PC to TC break</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Residential_Venue__c</fullName>
        <label>Residential Venue?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>local venue, non-residential</fullName>
                </value>
                <value>
                    <fullName>local venue, residential accommodation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Wave_schedule_2__c</fullName>
        <label>Wave schedule 2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Wave_schedule_3__c</fullName>
        <label>Wave schedule 3</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Wave_schedule__c</fullName>
        <label>Wave schedule</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>richtest__c</fullName>
        <label>richtest</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <label>Wave Template</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Autumn_wave__c</columns>
        <columns>OBJECT_ID</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>X2012A</fullName>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Wave_Template__c.A</value>
        </filters>
        <label>2012A</label>
    </listViews>
    <listViews>
        <fullName>X2013</fullName>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>Autumn_wave__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Wave_Template__c.X2013</value>
        </filters>
        <label>2013</label>
    </listViews>
    <listViews>
        <fullName>X2013_Autumn</fullName>
        <columns>NAME</columns>
        <columns>Autumn_wave__c</columns>
        <columns>Wave_schedule__c</columns>
        <columns>Wave_schedule_2__c</columns>
        <columns>Wave_schedule_3__c</columns>
        <columns>Residential_Venue__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Wave_Template__c.X2013</value>
        </filters>
        <filters>
            <field>Autumn_wave__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>2013 Autumn</label>
    </listViews>
    <listViews>
        <fullName>X2014</fullName>
        <columns>NAME</columns>
        <columns>Wave_schedule__c</columns>
        <columns>Wave_schedule_2__c</columns>
        <columns>Wave_schedule_3__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>Autumn_wave__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Wave_Template__c.X2014</value>
        </filters>
        <label>2014</label>
    </listViews>
    <listViews>
        <fullName>X2015</fullName>
        <columns>NAME</columns>
        <columns>Wave_schedule__c</columns>
        <columns>Wave_schedule_2__c</columns>
        <columns>Wave_schedule_3__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>Autumn_wave__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Wave_Template__c.X2015</value>
        </filters>
        <label>2015</label>
    </listViews>
    <listViews>
        <fullName>X2015wm</fullName>
        <columns>NAME</columns>
        <columns>Wave_schedule__c</columns>
        <columns>Wave_schedule_2__c</columns>
        <columns>Wave_schedule_3__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>Autumn_wave__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Wave_Template__c.X2015</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>wm</value>
        </filters>
        <label>2015WM</label>
    </listViews>
    <listViews>
        <fullName>X2016</fullName>
        <columns>NAME</columns>
        <columns>Wave_schedule__c</columns>
        <columns>Wave_schedule_2__c</columns>
        <columns>Wave_schedule_3__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>Autumn_wave__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Wave_Template__c.X2016</value>
        </filters>
        <label>2016</label>
    </listViews>
    <nameField>
        <label>Wave Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Wave Template</pluralLabel>
    <recordTypes>
        <fullName>A</fullName>
        <active>true</active>
        <description>Autumn wave templates</description>
        <label>A</label>
    </recordTypes>
    <recordTypes>
        <fullName>X2013</fullName>
        <active>true</active>
        <description>2013 Wave templates</description>
        <label>2013</label>
    </recordTypes>
    <recordTypes>
        <fullName>X2014</fullName>
        <active>true</active>
        <label>2014</label>
    </recordTypes>
    <recordTypes>
        <fullName>X2015</fullName>
        <active>true</active>
        <label>2015</label>
    </recordTypes>
    <recordTypes>
        <fullName>X2016</fullName>
        <active>true</active>
        <description>Wave Template for 2016</description>
        <label>2016</label>
    </recordTypes>
    <recordTypes>
        <fullName>X2017</fullName>
        <active>true</active>
        <description>Wave Template 2017</description>
        <label>2017</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
</CustomObject>